// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie renders with passed in data 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(CardContent))>
    <img
      alt="A fake movie"
      className="makeStyles-movie-1"
      src="https://m.media-amazon.com/images/M/MV5BOWZlMjFiYzgtMTUzNC00Y2IzLTk1NTMtZmNhMTczNTk0ODk1XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg"
    />
    <div
      className="makeStyles-title-2"
      key="A fake movie"
    >
      A fake movie
    </div>
  </WithStyles(ForwardRef(CardContent))>
</WithStyles(ForwardRef(Card))>
`;

exports[`Movie without poster renders 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(CardContent))>
    <img
      alt="Star Wars: Episode XX - Return of the Franchise"
      className="makeStyles-movie-1"
      src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
    />
    <div
      className="makeStyles-title-2"
      key="Star Wars: Episode XX - Return of the Franchise"
    >
      Star Wars: Episode XX - Return of the Franchise
    </div>
  </WithStyles(ForwardRef(CardContent))>
</WithStyles(ForwardRef(Card))>
`;
